<resources>
    <string name="app_name">Student App</string>
    <string name="last_user_id" />
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open" />
    <string name="close" />
    <string name="app_login">Login</string>
    <string name="app_register">Register</string>
    <string name="title">Welcome Admin</string>
    <string name="back_app">Back</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="yr_lastname">Your Last name</string>
    <string name="yr_firstname">Your First name</string>
    <string name="yr_emailaddress">Your Email address</string>
    <string name="yr_password">Your Password</string>
    <string name="code_class">class code: </string>
    <string name="name_class">class name: </string>
    <string name="department_code">department code: </string>
    <string name="update_info">update info</string>
    <string name="faculty_name">Faculty name: </string>
    <string name="admin_app">Admin College App</string>
    <string name="classs">Classes</string>
    <string name="faculties">Faculties</string>
    <string name="up_notification">upload notification</string>
    <string name="up_picture">upload picture</string>
    <string name="up_book">upload book</string>
    <string name="add_faculty">Add faculty</string>
    <string name="dele_notifi">Delete notification</string>
    <string name="the_universities">The Universities</string>
    <string name="student">Students</string>
    <string name="scho_name">School name: </string>
    <string name="scho_code">School code: </string>
    <string name="scho_address">address: </string>
    <string name="scho_phone">phone: </string>
    <string name="stu_fullname">Full name: </string>
    <string name="stu_code">Student code: </string>
    <string name="class_code">Class code: </string>
    <string name="univer">University: </string>
    <string name="birthday">Birthday: </string>
    <string name="Gender">Gender: </string>
    <string name="infor_page">information page</string>
    <string name="maage">Manage</string>
    <string name="add_stu">Add student</string>
    <string name="faculty_ma">faculty manager</string>
    <string name="student_ma">Student manager</string>
    <string name="logout">Log out</string>
    <string name="language">language</string>
</resources>