<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/homes"
        android:title="@string/infor_page"
        android:icon="@drawable/home_admin" />
    <item android:title="@string/maage"
        android:id="@+id/homeId"
        android:icon="@drawable/ic_home" />
    <item android:id="@+id/adds"
        android:title="@string/add_stu"
        android:icon="@drawable/add"
        />
    <item android:id="@+id/detail"
        android:title="@string/faculty_ma"
        android:icon="@drawable/skhoa"
        />
    <item android:id="@+id/studentMn"
        android:title="@string/student_ma"
        android:icon="@drawable/khoaa"
        />
    <item android:id="@+id/language"
        android:title="@string/language"
        android:icon="@drawable/language"
        />
    <item android:id="@+id/logout"
        android:title="@string/logout"
        android:icon="@drawable/logouts"
        />

</menu>